# 0inspection

./: CMakeLists.txt  CMakeLists.txt~  README.md  README.md~  package.xml  package.xml~
launch/: 1145.lm  1145.log_pronounce  1145.sent  1145.vocab  1943.log_pronounce  3590.dic  3590.log_pronounce  3590.sent  3590.vocab  4530.log_pronounce  8215.dic  8215.lm  8215.sent  8215.vocab  TAR1145.tgz  TAR1943.tgz  TAR3590.tgz  TAR4530.tgz  TAR8215.tgz  dnavigation.dic  dnavigation.lm  dnavigation.sent  dnavigation.txt  dnavigation.vocab  followme.dic.org  followme.lm  followme.txt.org  voice_commands.txt  voice_recog.launch  voice_recog.launch.org
script/: demulab.pgm  demulab.yaml  demulab.yaml~  dnavigation.sh.org  inspection-new.sh~  inspection-old.sh  inspection.sh  robocup2015.pgm  robocup2015.yaml  robocup2015.yaml~  robocup20150718-doorclose.pgm  robocup20150718.xcf  robocup20150718.yaml  robocup20150718.yaml~  videofile.avi  videofile2.avi
src/: inspection.cpp  inspection.cpp~  inspection.hpp  param.hpp  param.hpp~
